# ccwasm

./: .gitignore  build.gradle  gradle.properties  readme.md
example_wasm/: minesweeper.wasm  pic_display.wasm
examples/minesweeper/: Cargo.toml  build.bat  out.wat
examples/minesweeper/src/: functions.rs  lib.rs  local_monitor.rs  ms.rs  simple_cell.rs  utils.rs  vec2d.rs
examples/pic_display/: .gitignore  Cargo.toml  build.bat
examples/pic_display/src/: lib copy 2.rs  lib copy 3.rs  lib copy 4.rs  lib copy.rs  lib.rs  lib_multi.rs  main.rs  pic_process.rs  txt.txt
examples/txt_display/: Cargo.toml  build.bat
examples/txt_display/src/: lib copy 2.rs  lib copy 3.rs  lib copy 4.rs  lib copy 5.rs  lib copy 6.rs  lib copy.rs  lib.rs  main.rs
examples/wasmlib/: build_wasm.bat
examples/wasmlib/src/: eval.rs  lib.rs  main_py.rs
gradle/wrapper/: gradle-wrapper.properties
src/client/java/com/iung/ccwasm/: CcwasmClient.java
src/client/resources/: ccwasm.client.mixins.json
src/main/java/com/iung/ccwasm/: Ccwasm.java  CcwasmDataGenerator.java  Main.java  WasmCtx.java
src/main/java/com/iung/ccwasm/api/: Api1.java
src/main/resources/: ccwasm.mixins.json  fabric.mod.json
wasmipython/: Cargo.toml  importing.wat  out.wat  py.wasm  run_wasmtime.bat
wasmipython/py/: Cargo.toml  build.bat  out.wat
wasmipython/py/src/: ffi.rs  lib.rs  utils.rs
wasmipython/src/: lib copy.rs  lib.rs  main.rs
wasmlib/: .gitignore  Cargo.toml  build_wasm.bat
wasmlib/src/: 1.py  cc_mod.rs  eval_1.rs  lib.rs  lua_api.rs  main.rs  py.rs  throw.rs  utils.rs
(+10 files in other folders)
