[package]
name = "wasmlib"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
[dependencies]
rustpython-vm = { version = "0.4.0", default-features = false, features = [
    "compiler",
    # "freeze-stdlib",
] }
# rustpython = { version = "0.4.0", default-features = false, features = [
#     # "stdlib",
#     # "freeze-stdlib",
# ] }
[profile.dev]
opt-level = 3
# lto = true
[profile.release]
opt-level = 3
lto = false
